<resources>
    <string name="app_name">Perpedus</string>
    <string name="loading_retrieving_location_text">Finding your location&#8230;</string>
    <string name="loading_retrieving_places_text">Looking around for places&#8230;</string>
    <string name="loading_enable_location_text">Please enable your location</string>
    <string name="loading_retry_button">RETRY</string>
    <string name="loading_places_error">Error retrieving places</string>
    <string name="toast_no_camera">Sorry, your device doesn\'t have a camera</string>
    <string name="toast_no_orientation">Sorry, your device doesn\'t have an orientation sensor</string>
    <string name="toast_no_gps">Sorry, your device doesn\'t have a gps</string>
    <string name="toast_permission_denied_camera">We need your camera permission to look around</string>
    <string name="toast_permission_denied_location">We need your location permission provide nearby places</string>
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="main_no_landscape_text">Landscape mode is not supported</string>
    <string name="main_retrieving_places_text">Looking around for places</string>
    <string name="main_please_wait_text">Please wait&#8230;</string>
    <string name="main_no_gps_title">No GPS signal</string>
    <string name="main_no_gps_description">Locations might be inaccurate</string>
    <string name="toast_place_found" formatted="false">%number% place found</string>
    <string name="toast_places_found" formatted="false">%number% places found</string>
    <string name="toast_no_places_found" >No places found</string>
    <string name="toast_places_error">Cannot retrieve places</string>
    <string name="toast_back_to_exit">Press back again to exit</string>
    <string name="tutorial_button_next">NEXT</string>
    <string name="tutorial_button_finish">FINISH</string>
    <string name="tutorial_text_completed">(COMPLETED)</string>
    <string name="tutorial_text_level_1">Look around you through your phone to see nearby places. Fix a place into the yellow marker.\n(Tip: The arrows indicate which way to look to find a place)</string>
    <string name="tutorial_text_level_2">While keeping focus over a place, tap the yellow bubble at the bottom to see more details.</string>
    <string name="tutorial_text_level_3">Drag the drawer from the left of the screen, type in a keyword and press SEARCH.</string>
    <string name="tutorial_text_level_4">Congratulations, you completed the tutorial. Enjoy using Perpedus!</string>
    <string name="drawer_title_text">Search for places</string>
    <string name="drawer_keyword_text">What are you looking for?</string>
    <string name="drawer_radius_text">Search Area</string>
    <string name="drawer_km_text">km</string>
    <string name="drawer_type_text">Category</string>
    <string name="drawer_number_text">How many places?</string>
    <string name="drawer_all">All</string>
    <string name="drawer_only_closest">Only the closest one</string>
    <string name="drawer_edit_type_text">EDIT</string>
    <string name="drawer_search_button">SEARCH</string>
    <string name="types_all_types">All Categories</string>
    <string name="types_field_hint">Category name</string>
    <string name="settings_title">Settings</string>
    <string name="settings_app_language">App Language</string>
    <string name="settings_language">Places Language</string>
    <string name="settings_credits">Credits</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms_and_conditions">Terms and Conditions</string>
    <string name="place_details_no_phone">No phone available</string>
    <string name="place_details_cannot_call">Cannot call this number</string>
    <string name="place_details_cannot_navigate">You don\'t have a navigation app</string>
    <string name="place_details_navigate">Take me there</string>
    <string name="sensors_calibration_title_text">Lets CALIBRATE your awesome phone</string>
    <string name="sensors_calibration_description_text">Wave your device around several times in a figure of 8 pattern</string>
    <string name="sensors_calibration_hint_text">It\'s recommended to calibrate your phone each time you use the app</string>
    <string name="sensors_calibration_ok_button">DONE</string>
    <string name="place_type_accounting">Accounting</string>
    <string name="place_type_airport">Airport</string>
    <string name="place_type_amusement_park">Amusement Park</string>
    <string name="place_type_aquarium">Aquarium</string>
    <string name="place_type_art_gallery">Art Gallery</string>
    <string name="place_type_atm">ATM</string>
    <string name="place_type_bakery">Bakery</string>
    <string name="place_type_bank">Bank</string>
    <string name="place_type_bar">Bar</string>
    <string name="place_type_beauty_salon">Beauty Salon</string>
    <string name="place_type_bicycle_store">Bicycle Store</string>
    <string name="place_type_book_store">Book Store</string>
    <string name="place_type_bowling_alley">Bowling Alley</string>
    <string name="place_type_bus_station">Bus Station</string>
    <string name="place_type_cafe">Cafe</string>
    <string name="place_type_campground">Campground</string>
    <string name="place_type_car_dealer">Car Dealer</string>
    <string name="place_type_car_rental">Car Rental</string>
    <string name="place_type_car_repair">Car Repair</string>
    <string name="place_type_car_wash">Car Wash</string>
    <string name="place_type_casino">Casino</string>
    <string name="place_type_cemetery">Cemetery</string>
    <string name="place_type_church">Church</string>
    <string name="place_type_city_hall">City Hall</string>
    <string name="place_type_clothing_store">Clothing Store</string>
    <string name="place_type_convenience_store">Convenience Store</string>
    <string name="place_type_courthouse">Courthouse</string>
    <string name="place_type_dentist">Dentist</string>
    <string name="place_type_department_store">Department Store</string>
    <string name="place_type_doctor">Doctor</string>
    <string name="place_type_electrician">Electrician</string>
    <string name="place_type_electronics_store">Electronics Store</string>
    <string name="place_type_embassy">Embassy</string>
    <string name="place_type_establishment">Establishment</string>
    <string name="place_type_finance">Finance</string>
    <string name="place_type_fire_station">Fire Station</string>
    <string name="place_type_florist">Florist</string>
    <string name="place_type_food">Food</string>
    <string name="place_type_funeral_home">Funeral Home</string>
    <string name="place_type_furniture_store">Furniture Store</string>
    <string name="place_type_gas_station">Gas Station</string>
    <string name="place_type_general_contractor">General Contractor</string>
    <string name="place_type_grocery_or_supermarket">Grocery or Supermarket</string>
    <string name="place_type_gym">Gym</string>
    <string name="place_type_hair_care">Hair Care</string>
    <string name="place_type_hardware_store">Hardware Store</string>
    <string name="place_type_health">Health</string>
    <string name="place_type_hindu_temple">Hindu Temple</string>
    <string name="place_type_home_goods_store">Home Goods Store</string>
    <string name="place_type_hospital">Hospital</string>
    <string name="place_type_insurance_agency">Insurance Agency</string>
    <string name="place_type_jewelry_store">Jewelry Store</string>
    <string name="place_type_laundry">Laundry</string>
    <string name="place_type_lawyer">Lawyer</string>
    <string name="place_type_library">Library</string>
    <string name="place_type_liquor_store">Liquor Store</string>
    <string name="place_type_local_government_office">Local Government Office</string>
    <string name="place_type_locksmith">Locksmith</string>
    <string name="place_type_lodging">Hotel</string>
    <string name="place_type_meal_delivery">Meal Delivery</string>
    <string name="place_type_meal_takeaway">Meal Takeaway</string>
    <string name="place_type_mosque">Mosque</string>
    <string name="place_type_movie_rental">Movie Rental</string>
    <string name="place_type_movie_theater">Cinema</string>
    <string name="place_type_moving_company">Moving Company</string>
    <string name="place_type_museum">Museum</string>
    <string name="place_type_night_club">Night Club</string>
    <string name="place_type_painter">Painter</string>
    <string name="place_type_park">Park</string>
    <string name="place_type_parking">Parking</string>
    <string name="place_type_pet_store">Pet Store</string>
    <string name="place_type_pharmacy">Pharmacy</string>
    <string name="place_type_physiotherapist">Physiotherapist</string>
    <string name="place_type_place_of_worship">Place of Workship</string>
    <string name="place_type_plumber">Plumber</string>
    <string name="place_type_police">Police</string>
    <string name="place_type_post_office">Post Office</string>
    <string name="place_type_real_estate_agency">Real Estate Agency</string>
    <string name="place_type_restaurant">Restaurant</string>
    <string name="place_type_roofing_contractor">Roofing Contractor</string>
    <string name="place_type_rv_park">RV Park</string>
    <string name="place_type_school">School</string>
    <string name="place_type_shoe_store">Shoe Store</string>
    <string name="place_type_shopping_mall">Shopping Mall</string>
    <string name="place_type_spa">Spa</string>
    <string name="place_type_stadium">Stadium</string>
    <string name="place_type_storage">Storage</string>
    <string name="place_type_store">Store</string>
    <string name="place_type_subway_station">Subway Station</string>
    <string name="place_type_synagogue">Synagogue</string>
    <string name="place_type_taxi_stand">Taxi Stand</string>
    <string name="place_type_train_station">Train Station</string>
    <string name="place_type_travel_agency">Travel Agency</string>
    <string name="place_type_university">University</string>
    <string name="place_type_veterinary_care">Veterinary Care</string>
    <string name="place_type_zoo">Zoo</string>
    <string name="place_type_administrative_area_level_1">Administrative Area Level 1</string>
    <string name="place_type_administrative_area_level_2">Administrative Area Level 2</string>
    <string name="place_type_administrative_area_level_3">Administrative Area Level 3</string>
    <string name="place_type_administrative_area_level_4">Administrative Area Level 4</string>
    <string name="place_type_administrative_area_level_5">Administrative Area Level 5</string>
    <string name="place_type_colloquial_area">Colloquial Area</string>
    <string name="place_type_country">Country</string>
    <string name="place_type_floor">Floor</string>
    <string name="place_type_geocode">Geocode</string>
    <string name="place_type_intersection">Intersection</string>
    <string name="place_type_locality">Locality</string>
    <string name="place_type_natural_feature">Natural Feature</string>
    <string name="place_type_neighborhood">Neighborhood</string>
    <string name="place_type_political">Political</string>
    <string name="place_type_point_of_interest">Point of Interest</string>
    <string name="place_type_post_box">Post Box</string>
    <string name="place_type_postal_code">Postal Code</string>
    <string name="place_type_postal_code_prefix">Postal Code Prefix</string>
    <string name="place_type_postal_code_suffix">Postal Code Sufix</string>
    <string name="place_type_postal_town">Postal Town</string>
    <string name="place_type_premise">Premise</string>
    <string name="place_type_room">Room</string>
    <string name="place_type_route">Route</string>
    <string name="place_type_street_address">Street Address</string>
</resources>