<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_blue">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:scaleType="center"
        android:src="@drawable/background_tit_big" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/bu2_5"
                android:text="@string/drawer_title_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_42px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bu1"
                android:layout_marginRight="@dimen/bu1"
                android:layout_marginTop="@dimen/bu2_5"
                android:background="@drawable/light_grey_rounded_shape"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bu1"
                    android:layout_marginTop="@dimen/bu1"
                    android:text="@string/drawer_keyword_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_30px" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/location_name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/bu1"
                        android:layout_marginLeft="@dimen/bu1"
                        android:layout_marginRight="@dimen/bu1"
                        android:layout_marginTop="@dimen/bu1"
                        android:background="@drawable/icon_edittext_background"
                        android:inputType="textVisiblePassword|textCapSentences"
                        android:maxLength="40"
                        android:textColor="@color/white"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/text_size_30px" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bu1"
                android:layout_marginRight="@dimen/bu1"
                android:layout_marginTop="@dimen/bu2"
                android:background="@drawable/light_grey_rounded_shape"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bu1"
                    android:layout_marginRight="@dimen/bu1"
                    android:layout_marginTop="@dimen/bu1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_radius_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_30px" />

                    <TextView
                        android:id="@+id/radius_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_30px" />
                </RelativeLayout>

                <SeekBar
                    android:id="@+id/radius_seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bu1"
                    android:layout_marginTop="@dimen/bu1"
                    android:max="49"
                    android:progressDrawable="@drawable/icon_seekbar_progress"
                    android:thumb="@drawable/icon_seekbar_thumb" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bu1"
                android:layout_marginRight="@dimen/bu1"
                android:layout_marginTop="@dimen/bu2"
                android:background="@drawable/light_grey_rounded_shape">

                <TextView
                    android:id="@+id/category_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bu1"
                    android:layout_marginTop="@dimen/bu1"
                    android:text="@string/drawer_type_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_30px" />

                <RelativeLayout
                    android:id="@+id/edit_category_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/bu1"
                        android:text="@string/drawer_edit_type_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_30px" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/category_label"
                    android:layout_marginBottom="@dimen/bu1"
                    android:layout_marginLeft="@dimen/bu1"
                    android:layout_marginTop="@dimen/bu1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/category_icon"
                        android:layout_width="@dimen/bu2"
                        android:layout_height="@dimen/bu2"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/category_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/bu1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_30px" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/selected_types_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bu1"
                android:layout_marginRight="@dimen/bu1"
                android:orientation="vertical" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bu4"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/bu1"
                android:layout_marginTop="@dimen/bu2"
                android:background="@drawable/search_button_selector"
                android:paddingLeft="@dimen/bu2"
                android:paddingRight="@dimen/bu2"
                android:text="@string/drawer_search_button"
                android:textColor="@color/grey_blue"
                android:textSize="@dimen/text_size_36px" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>